add developer name to pom, code review edits